Minor Change in refer page

--- a/pages/refer.html
+++ b/pages/refer.html
@@ -19,7 +19,7 @@
     <a href="../index.html"><button>GO BACK</button></a>
     <br>
     <br>
-    <a href="./menu.html"><button>Go to Menu Assesment</button></a>
+    <a href="./menu.html" target="_blank"><button>Go to Menu Assesment</button></a>
 </body>
 
 </html>
